fix scrollbars

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -8,7 +8,6 @@ body, html {
 	background: #ffffff;
 	color: #333;
 	z-index: 0;
-	overflow: scroll;
     -webkit-overflow-scrolling: touch;
 }	
 
